--- a/SPX_predictions_GRU.ipynb
+++ b/SPX_predictions_GRU.ipynb
@@ -125,7 +125,7 @@
       "source": [
         "# First, we get the data\n",
         "# dataset = pd.DataFrame(data, index_col='Date', parse_dates=['Date'])\n",
-        "# TATAGLOBAL.NS\n",
+        "# SPX\n",
         "share = \"^GSPC\"\n",
         "dataset = pdr.get_data_yahoo(share)\n",
         "dataset = dataset.dropna() # removing missing value rows\n",
